...
            else {
                ScrollView {
                    VStack(alignment: .leading, spacing: 8) {
                        if let repo = viewModel.repo {
                            if let urlString = repo.htmlURL,
                                let url = URL(string: urlString) {
                                Text("URL:")
                                    .fontWeight(.bold)
                                Link(urlString, destination: url)
                                    .environment(\.openURL, openURLAction)
                            }
                            if let description = repo.repoDescription {
                                Text("Description:")
...
